--- a/rplace-2023.css
+++ b/rplace-2023.css
@@ -247,11 +247,11 @@ r-close-icon {
 	display: block !important;
 }
 
-#playerIcon {
+#onlinePanel {
 	color: black;
 }
 
-#onlineCounter {
+#playerIcon {
 	color: black;
 }
 
